--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 langchain==0.3.23
 langchain-core==0.3.51
 langchain-text-splitters==0.3.8
-langchain-community==0.3.21
 sentence-transformers==4.0.2
 transformers==4.51.2
 torch==2.6.0
@@ -10,5 +9,9 @@ numpy==2.2.4
 pandas==2.2.3
 scikit-learn==1.6.1
 matplotlib==3.10.1
-pypdf==5.4.0
 python-dotenv==1.1.0
+tika==2.6.0
+pytesseract==0.3.10
+pdf2image==1.18.0
+Pillow==10.4.0
+fpdf2==2.8.2
