--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ scikit-learn==1.6.1
 matplotlib==3.10.1
 python-dotenv==1.1.0
 tika==2.6.0
-pytesseract==0.3.10
+easyocr==1.7.0
 pdf2image==1.18.0
 Pillow==10.4.0
 fpdf2==2.8.2
